--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version = "1", features = ["serde_derive"]}
 serde_json = "1"
 rand = "0.8.4"
+clap = { version = "3.2.8", features = ["derive"] }
