--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,10 +1,7 @@
 name: Rust
 
 on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+  [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
